[0.13.0]
-- Support java source code file
-- Auto detect file type

[0.12.0]
-- add semverenv.bat script
-- Generate major, minor, patch number in version file
-- Achieve 100% unit test coverage

[0.11.1]
-- Fix issue: there would be extra gcov information under linux

[0.11.0]
-- User can specify the version name
-- Include modify date in version file is optional
-- Do unit test by unity