@@ -1,7 +1,3 @@
-//----------------------------------------------------------------------------//
-/// \file   run.h
-/// \brief  
-//----------------------------------------------------------------------------//
 #ifndef RUN_H
 #define RUN_H
 
