@@ -26,7 +26,7 @@ int Setting_Parse( tSetting *as, int argc, char **argv )
   }
 
   opterr = 0;
-  while ( ( c = getopt( argc, argv, "xyzvghda:i:l:n:" ) ) != -1 )
+  while ( ( c = getopt( argc, argv, "xyzvgha:i:l:n:" ) ) != -1 )
   {
     switch ( c )
     {
@@ -40,10 +40,6 @@ int Setting_Parse( tSetting *as, int argc, char **argv )
 
       case 'z':
         as->index = 0;
-        break;
-
-      case 'd':
-        as->needdate = 1;
         break;
 
       case 'l':
